--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<html>
-  <head>
-    <script type="text/javascript" src="isit.js"></script>
-    <link rel="stylesheet" type="text/css" href="s.css" />
-    <title>Is it lunch time yet?</title>
-  </head>
-  <body></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Is it Lunch Yet</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1 id="message"></h1>
+  <h1 id="time-left"></h1>
+  <script src="script.js"></script>
+</body>
 </html>
